--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
+// {
+//   "extends": [
+//     "next"
+//   ]
+// }
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/babel","next/core-web-vitals"]
 }
