--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
-{
-  "extends": [
-    "next"
-  ]
-}
 // {
-//   "extends": ["next/babel","next/core-web-vitals"]
+//   "extends": [
+//     "next"
+//   ]
 // }
+{
+  "extends": ["next/babel","next/core-web-vitals"]
+}
