--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "bootstrap": "^5.1.3",
+    "country-state-city": "^3.0.1",
     "formik": "^2.2.9",
     "html-react-parser": "^2.0.0",
     "next": "12.2.0",
