--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.1.3",
     "country-state-city": "^3.0.1",
     "formik": "^2.2.9",
+    "graphql": "^16.5.0",
     "html-react-parser": "^2.0.0",
     "next": "12.2.0",
     "react": "18.2.0",
