--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.8.7",
     "bootstrap": "^5.1.3",
     "country-state-city": "^3.0.1",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "html-react-parser": "^2.0.0",
